[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Soldiers/0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Towns/Flags/0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Soldiers/TimeToMove.png" type="Texture" id=3]
[ext_resource path="res://Assets/Soldiers/Bot.png" type="Texture" id=4]
[ext_resource path="res://Assets/Soldiers/Over_hp.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Soldier.gd" type="Script" id=6]
[ext_resource path="res://Assets/Soldiers/Move_ok.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.5
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 0.01

[node name="Soldier" type="KinematicBody2D"]
position = Vector2( 100, 50 )
script = ExtResource( 6 )

[node name="Flag" type="Sprite" parent="."]
position = Vector2( -1.39666, -39.7869 )
scale = Vector2( 0.578601, 0.444378 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimeToMove" type="TextureProgress" parent="."]
margin_left = -17.0
margin_top = -9.0
margin_right = 47.0
margin_bottom = 55.0
rect_scale = Vector2( 0.5, 0.3 )
texture_progress = ExtResource( 3 )
fill_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 4 )
hframes = 60
frame = 21

[node name="Hp" type="TextureProgress" parent="."]
margin_left = -26.4292
margin_top = -32.0713
margin_right = 73.5708
margin_bottom = -12.0713
rect_scale = Vector2( 0.5, 0.5 )
value = 40.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = -22.0003
margin_top = -46.3791
margin_right = 17.9997
margin_bottom = -32.3791
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckMove" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
offset = Vector2( 0, -28 )

[node name="Area2D" type="Area2D" parent="CheckMove"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckMove/Area2D"]
shape = SubResource( 2 )

[node name="Select" type="TextureButton" parent="."]
margin_left = -20.0
margin_top = -26.0
margin_right = 20.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="CheckMove/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="button_down" from="Select" to="." method="_on_Select_button_down"]
[connection signal="button_up" from="Select" to="." method="_on_Select_button_up"]
